--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -57,6 +57,6 @@ jobs:
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         application_name: ${{ secrets.EB_APPLICATION_NAME }}
         environment_name: ${{ secrets.EB_ENVIRONMENT_NAME }}
-        version_label: latest
+        version_label: ${{ github.sha }}
         region: ${{ secrets.AWS_REGION }}
         wait_for_environment_recovery: 300
